--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css"/>
     <link rel="stylesheet" href="style.css"/>
     <title>Dashboard</title>
 </head>
 <body>
-    
+    <div class="sidebar">
+
+    </div>
+    <div class="header">
+
+    </div>
+    <div class="content">
+
+    </div>
 </body>
 </html>
