--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title>Dashboard</title>
 </head>
 <body>
-    <div class="sidebar">
+    <div class="container">
+        <div class="sidebar">
 
-    </div>
-    <div class="header">
+        </div>
+        <div class="header">
 
-    </div>
-    <div class="content">
+        </div>
+        <div class="content">
 
+        </div>
     </div>
 </body>
 </html>
