--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
 <body>
     <div class="container">
         <div class="sidebar">
-
+            <div class="logo">Dashboard</div>
+            <div class="main">
+                <ul>
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Messages</li>
+                    <li>History</li>
+                    <li>Tasks</li>
+                    <li>Communities</li>
+                </ul>
+            </div>
+            <div class="additional">
+                <ul>
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
         </div>
         <div class="header">
 
