aligned and added items to header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,30 @@
             </div>
         </div>
         <div class="header">
+            <div class="upper">
+                <div class="left">
+                    <img class="search" src="search-web.svg" width="40px" height="40px" alt="Search"/>
+                    <div class="searchbar"></div>
+                </div>
+                <div class="right">
+                    <img class="bell" src="bell-outline.svg" width="40px" height="40px" alt="Notification"/>
+                    <div class="profile"></div>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="left">
+                    <div class="profile"></div>
+                    <div class="name">Hi there,</div>
+                </div>
+                <div class="right">
+                    <div class="new">New</div>
+                    <div class="upload">Upload</div>
+                    <div class="share">Share</div>
+                </div>
 
+                
+                <div class="buttons"></div>
+            </div>
         </div>
         <div class="content">
 
